codepkg/objects/HH_Stage_Config__mdt.object
<CustomObject>
    <description>This metadata is used to configure the Stage and Status field display based on the assigned Permission set to User in Home Hardening Application.</description>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <description>Current Stage of the HH Application record.</description>
        <inlineHelpText>Current Stage of the HH Application record.</inlineHelpText>
        <label>Current Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Community Review</fullName>
                    <default>true</default>
                    <label>Community Review</label>
                </value>
                <value>
                    <fullName>Community Decision</fullName>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Assessment Decision</fullName>
                </value>
                <value>
                    <fullName>CalOES Review</fullName>
                    <label>OES Review</label>
                </value>
                <value>
                    <fullName>OES Decision</fullName>
                </value>
                <value>
                    <fullName>FEMA Review</fullName>
                </value>
                <value>
                    <fullName>FEMA Decision</fullName>
                </value>
                <value>
                    <fullName>Homeowner Agreement</fullName>
                </value>
                <value>
                    <fullName>Approved- Converted</fullName>
                    <label>Approved - Converted</label>
                </value>
                <value>
                    <fullName>Rejected - Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Substage__c</fullName>
        <description>Current Sub-Stage(Status) of the HH Application record.</description>
        <inlineHelpText>Current Sub-Stage(Status) of the HH Application record.</inlineHelpText>
        <label>Current Substage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Community Review Pending</fullName>
                    <default>true</default>
                    <label>Community Review Pending</label>
                </value>
                <value>
                    <fullName>Community Review In Progress</fullName>
                </value>
                <value>
                    <fullName>Community Review Complete</fullName>
                </value>
                <value>
                    <fullName>Open Community RFI- Need more Info</fullName>
                </value>
                <value>
                    <fullName>Community Decision Pending</fullName>
                </value>
                <value>
                    <fullName>Approved for Assessment</fullName>
                </value>
                <value>
                    <fullName>Rejected - Does not meet Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Allowed Stages to be visible to the User.</description>
        <inlineHelpText>Allowed Stages to be visible to the User.</inlineHelpText>
        <label>Allowed Stages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Substage__c</fullName>
        <description>Allowed Substage(Status) to be visible to the user.</description>
        <inlineHelpText>Allowed Substage(Status) to be visible to the user.</inlineHelpText>
        <label>Substage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>HH Stage Config</label>
    <pluralLabel>HH Stage Configs</pluralLabel>
</CustomObject>